# confidential-streaming-miden

./: .gitignore  ARCHITECTURE.md  Cargo.toml  PLAN.md  README.md
content/: private-streaming-on-miden.md
masm/notes/: stream_tranche.masm
rust-client/: Cargo.toml
rust-client/src/: lib.rs
web/: next.config.ts  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/components/: accounts-card.tsx  activity-log.tsx  create-stream-form.tsx  hero.tsx  modal-shell.tsx  network-bar.tsx  stone-hero.tsx  stone-stream.tsx  stream-card.tsx  stream-details-panel.tsx  stream-progress.tsx
web/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
web/lib/: miden.ts  storage.ts  time.ts  utils.ts
